--- a/bbr_backend/package.json
+++ b/bbr_backend/package.json
@@ -1,9 +1,24 @@
 {
+  "name": "bbr_backend",
+  "version": "1.0.0",
+  "description": "",
+  "main": "index.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "npx tsx src/index.ts"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
   "dependencies": {
+    "@types/node": "^20.12.10",
     "dotenv": "^16.4.5",
-    "express": "^4.19.2"
+    "express": "^4.19.2",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.4.5"
   },
   "devDependencies": {
-    "@types/node": "^20.12.8"
+    "@types/express": "^4.17.21",
+    "tsx": "^4.9.3"
   }
 }
