--- a/bbr_backend/package.json
+++ b/bbr_backend/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "npx tsx src/index.ts"
+    "start": "npx tsx index.ts"
   },
   "keywords": [],
   "author": "",
