--- a/server/package.json
+++ b/server/package.json
@@ -17,6 +17,7 @@
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "mysql2": "^3.9.7",
+    "passport-local": "^1.0.0",
     "sequelize": "^6.37.3",
     "sequelize-cli": "^6.6.2",
     "ts-node": "^10.9.2",
@@ -25,6 +26,7 @@
   "devDependencies": {
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
+    "@types/passport-local": "^1.0.38",
     "tsx": "^4.9.3"
   }
 }
