--- a/.github/workflows/main_beau-bike-repair.yml
+++ b/.github/workflows/main_beau-bike-repair.yml
@@ -25,16 +25,18 @@ jobs:
         run: |
           npm install
           npm run build --if-present
-          npm run test --if-present
+          npm run test --if-present,
+       
 
       - name: Zip artifact for deployment
+        working-directory: ./server
         run: zip release.zip ./* -r
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v3
         with:
           name: node-app
-          path: release.zip
+          path: ./server/release.zip
 
   deploy:
     runs-on: ubuntu-latest
