--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -5,10 +5,10 @@
       "target": "ES2020",
   
       // Use a custom module system called NodeNext
-      "module": "NodeNext",
+      "module": "es2022",
   
       // Use the nodenext module resolution strategy
-      "moduleResolution": "nodenext",
+      "moduleResolution": "node",
   
       // Enable compatibility with modules that use `export =` syntax
       "esModuleInterop": true,
