--- a/server/package.json
+++ b/server/package.json
@@ -6,7 +6,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\"",
-    "start": "npx tsx index.ts",
+    "dev": "nodemon --exec npx tsx index.ts",
+    "start": "node --import tsx --env-file .env --watch index.ts",
     "admin": "npx tsx createAdmin.ts"
   },
   "keywords": [],
